Aggiorna la dimensione della scena principale a 900x600, semplifica la logica di verifica dell'username e del codice fiscale, rimuovi riferimenti ai pulsanti nei file FXML, e implementa un nuovo sistema di Snackbar per la gestione dei messaggi.